--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
         <span id="option"></span>
        <div id="explainpage" class="ex">
-              <a href="major2.html">
+              <a href="index.html">
               <h1 id="opt">Home</h1></a>
               <a href="service.html">
               <h1 id="opt">Services</h1></a>
@@ -223,3 +223,4 @@
   </body>
 
 </html>
+
